[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
debug = 0

[package]
name = "rockhttp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
